[gd_scene load_steps=30 format=3 uid="uid://dvj7mvsdwgwyf"]

[ext_resource type="Script" path="res://scripts/enemy/enemy.gd" id="1_yon6p"]
[ext_resource type="PackedScene" uid="uid://cu5qhvshdwkrh" path="res://scenes/health_manager.tscn" id="2_is7vu"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="3_r8rcm"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_wander_state.gd" id="4_0nu0d"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_chase_state.gd" id="5_t6xk4"]
[ext_resource type="Script" path="res://scripts/camera_holder.gd" id="6_su43w"]
[ext_resource type="PackedScene" uid="uid://bwqgy5o7qvskv" path="res://scenes/gun_manager.tscn" id="7_8u4to"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_death.gd" id="8_5q5nn"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_meleeattack_state.gd" id="9_lckmg"]
[ext_resource type="Texture2D" uid="uid://banabxsdn1dcl" path="res://mutant.png" id="10_njubt"]
[ext_resource type="Script" path="res://extras_sprites/scripts/sprite_3D_billboard.gd" id="11_6txxn"]
[ext_resource type="Script" path="res://extras_sprites/scripts/animatio_data.gd" id="12_8qnle"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g4awk"]
radius = 0.6
height = 2.1

[sub_resource type="SphereShape3D" id="SphereShape3D_telvf"]
radius = 0.2

[sub_resource type="Animation" id="Animation_ucgis"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0126199, -0.0851758, -0.345915)]
}

[sub_resource type="Animation" id="Animation_4mudt"]
resource_name = "move_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.594603, 0.594603),
"update": 0,
"values": [Vector3(0.0126199, -0.0118248, -0.345915), Vector3(0.353386, -0.0851758, -0.345915)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xuo1"]
_data = {
"RESET": SubResource("Animation_ucgis"),
"move_side": SubResource("Animation_4mudt")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r2tlw"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hi44q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bm64j"]
albedo_color = Color(5.58317e-06, 0.594234, 0.780053, 1)

[sub_resource type="SphereMesh" id="SphereMesh_kjeqi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5dsut"]
albedo_color = Color(1, 0.1, 0.1, 1)

[sub_resource type="Shader" id="Shader_4ba12"]
code = "shader_type spatial;
render_mode diffuse_lambert_wrap,cull_disabled;

uniform float rows:hint_range(1.0, 100.0, 1) = 1;
uniform float columns:hint_range(1.0, 100.0, 1) = 1;
uniform float frame:hint_range(0.0, 100.0, 1) = 0;
uniform bool invert_rows_columns = false;
uniform sampler2D sprite:filter_nearest_mipmap;
uniform int mode:hint_range(0, 1, 1) = 1;
varying vec3 look_dir;


float billboard_mode_a(vec3 CAMERA_POSITION,vec3 NODE_POSITION, mat4 MODEL_MAT,float directions){
	vec3 direction_to_camera = normalize(CAMERA_POSITION-NODE_POSITION);
	float angle_to_camera = atan(direction_to_camera.x,direction_to_camera.z);
	vec4 model_direction = MODEL_MAT*vec4(1.0,0.0,0.0,0.0);
	float y_angle = atan(model_direction.x,model_direction.z)-PI/2.0;
	float final_angle = angle_to_camera-y_angle;
	float int_y_angle = round((final_angle / TAU) * float(directions)) / float(directions);
	return int_y_angle;
}
float billboard_mobe_b(vec3 CAMERA_POSITION,mat4 MODEL_MAT,mat4 VIEW_MAT,float directions,int ret){
	
    vec3 ray_origin = CAMERA_POSITION;
      
    vec3 object_origin = (MODEL_MAT * vec4(0.0,0.0,0.0,1.0)).xyz;
    vec3 cam_dir = object_origin - ray_origin;
    cam_dir = normalize((VIEW_MAT * vec4(cam_dir, 0.0)).xyz);

    float angle = 180.0 - degrees(acos(dot(normalize(cam_dir.xz), normalize(look_dir.xz))));
    float _direction = round(angle/180.0 * directions);

    float flip = sign((look_dir.x * cam_dir.z) - (look_dir.z * cam_dir.x));
	
    flip = mix(flip, 1.0, max(step(_direction, 0.0), step(directions, _direction)));
	float retu = ret == 0 ? _direction : flip;
	return retu ;
}
void vertex() {
		 MODELVIEW_MATRIX = VIEW_MATRIX * mat4(vec4(normalize(cross(vec3(0.0, 1.0, 0.0), INV_VIEW_MATRIX[2].xyz)), 0.0), vec4(0.0, 1.0, 0.0, 0.0), vec4(normalize(cross(INV_VIEW_MATRIX[0].xyz, vec3(0.0, 1.0, 0.0))), 0.0), MODEL_MATRIX[3]);
		look_dir = MODELVIEW_NORMAL_MATRIX * NORMAL;
		MODELVIEW_NORMAL_MATRIX = mat3(MODELVIEW_MATRIX);
	switch (mode){
		case 0:
			float y = invert_rows_columns == true ? billboard_mode_a(CAMERA_POSITION_WORLD,NODE_POSITION_WORLD,MODEL_MATRIX,rows) : billboard_mode_a(CAMERA_POSITION_WORLD,NODE_POSITION_WORLD,MODEL_MATRIX,columns);
			float x = invert_rows_columns == true ? frame/columns:frame/rows;
			UV /= vec2(rows,columns);
			UV += invert_rows_columns == true ?vec2(y,x):vec2(x,y);
			break;	
		case 1:
			float x = invert_rows_columns == true ? frame/columns:frame/rows;
			float y = billboard_mobe_b(CAMERA_POSITION_WORLD,MODEL_MATRIX,VIEW_MATRIX,rows,0);
			float f = billboard_mobe_b(CAMERA_POSITION_WORLD,MODEL_MATRIX,VIEW_MATRIX,rows,1);
			if (invert_rows_columns){
				y = billboard_mobe_b(CAMERA_POSITION_WORLD,MODEL_MATRIX,VIEW_MATRIX,columns,0);
				f = billboard_mobe_b(CAMERA_POSITION_WORLD,MODEL_MATRIX,VIEW_MATRIX,columns,1);
			}
			UV.y += invert_rows_columns == true ? x:y;
			UV /=vec2(rows,columns);
			UV.x +=  invert_rows_columns == true ? y : x;
			UV *= invert_rows_columns == true ? vec2(1.0,f):vec2(f,1.0);
			break;
	};
}	

void fragment() {
	vec4 sprite_texture;
	sprite_texture = texture(sprite,UV);
	ALBEDO = sprite_texture.rgb;
	ALPHA = sprite_texture.a;
}

"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t07gn"]
render_priority = 0
shader = SubResource("Shader_4ba12")
shader_parameter/rows = 4.0
shader_parameter/columns = 8.0
shader_parameter/frame = 1.0
shader_parameter/invert_rows_columns = false
shader_parameter/mode = 0
shader_parameter/sprite = ExtResource("10_njubt")

[sub_resource type="PlaneMesh" id="PlaneMesh_cg8t0"]
material = SubResource("ShaderMaterial_t07gn")
size = Vector2(2.79, 2.52)
orientation = 2

[sub_resource type="Resource" id="Resource_0n558"]
script = ExtResource("12_8qnle")
name = "idle"
sprite = ExtResource("10_njubt")
rows = 4.0
columns = 8.0
invert_rows_columns = false
mode = 0

[sub_resource type="Animation" id="Animation_8dhba"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_ijnqv"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0.0, 1.0, 2.0, 3.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xlmyq"]
_data = {
"RESET": SubResource("Animation_8dhba"),
"new_animation": SubResource("Animation_ijnqv")
}

[node name="enemy" type="CharacterBody3D"]
script = ExtResource("1_yon6p")
walk_speed = 1.0

[node name="HealthManager" parent="." instance=ExtResource("2_is7vu")]

[node name="CollisionShape3D" parent="HealthManager/body_hitbox" index="0"]
shape = SubResource("CapsuleShape3D_g4awk")

[node name="CollisionShape3D" parent="HealthManager/head_hitbox" index="0"]
shape = SubResource("SphereShape3D_telvf")

[node name="CameraHolder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75235, -0.74623)
script = ExtResource("6_su43w")

[node name="Camera3D" type="Camera3D" parent="CameraHolder"]
visible = false

[node name="GunManager" parent="CameraHolder" instance=ExtResource("7_8u4to")]
transform = Transform3D(-1.31134e-08, 0, 0.3, 0, 0.3, 0, -0.3, 0, -1.31134e-08, 0.0126199, -0.0851758, -0.345915)
visible = false

[node name="AnimationPlayer" parent="CameraHolder/GunManager" index="3"]
libraries = {
"": SubResource("AnimationLibrary_8xuo1")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("InitialState")]
script = ExtResource("3_r8rcm")
InitialState = NodePath("EnemyWander")

[node name="EnemyWander" type="Node" parent="StateMachine"]
script = ExtResource("4_0nu0d")

[node name="EnemyChase" type="Node" parent="StateMachine"]
script = ExtResource("5_t6xk4")

[node name="EnemyDeath" type="Node" parent="StateMachine"]
script = ExtResource("8_5q5nn")

[node name="EnemyMeleeAttack" type="Node" parent="StateMachine"]
script = ExtResource("9_lckmg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01824, 0)
shape = SubResource("CapsuleShape3D_r2tlw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03671, 0)
visible = false
mesh = SubResource("CapsuleMesh_hi44q")
surface_material_override/0 = SubResource("StandardMaterial3D_bm64j")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.325538, 0, 0, 0, 0.325538, 0, 0, 0, 0.325538, 0, 2.42524, 0)
visible = false
mesh = SubResource("SphereMesh_kjeqi")
surface_material_override/0 = SubResource("StandardMaterial3D_5dsut")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.325538, 0, 0, 0, 0.325538, 0, 0, 0, 0.325538, 0, 1.60543, -0.5748)
visible = false
mesh = SubResource("SphereMesh_kjeqi")
surface_material_override/0 = SubResource("StandardMaterial3D_5dsut")

[node name="DetectionAreas" type="Node3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.1
avoidance_enabled = true
height = 0.01
radius = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite3DBillBoard" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.999992, 0, 0.0040492, 0, 1, 0, -0.0040492, 0, -0.999992, 0, 1.28966, 0)
mesh = SubResource("PlaneMesh_cg8t0")
script = ExtResource("11_6txxn")
animations_array = Array[ExtResource("12_8qnle")]([SubResource("Resource_0n558")])
animation = 0
frame = 1.0
sprite_scale = 0.03

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite3DBillBoard"]
libraries = {
"": SubResource("AnimationLibrary_xlmyq")
}
autoplay = "new_animation"

[editable path="HealthManager"]
[editable path="CameraHolder/GunManager"]
